# fidget

./: .gitignore  README.md  example.ipynb  pyproject.toml
assets/: hyperboloid.stl
src/fidget/: __init__.py  ops.py  types.py
tests/: test_example.py  test_ops.py
