[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "fidget"
version = "0.1.0"
description = "A Python package for creating 3D-printable mechanical fidget toys with interconnected gears in various shapes."
authors = [
    {name = "Artyom Astafurov", email = "artyom.astafurov@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "lxml>=5.3.0",
    "manifold3d>=2.5.1",
    "networkx>=3.4.2",
    "pydantic>=2.9.2",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
    "svg-path>=6.3",
    "trimesh>=4.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fidget"]
